--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "axios": "^1.13.4",
     "cors": "^2.8.5",
-    "jimp": "^0.22.10"
+    "express": "^4.18.2",
+    "form-data": "^4.0.5",
+    "jimp": "^0.22.10",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.5"
   }
 }
