--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@tensorflow/tfjs-node": "^4.22.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "form-data": "^4.0.5",
     "jimp": "^0.22.10",
